# ball_tracker_project

./: .gitignore  CLAUDE.md  HANDOFF.md  Info.plist  start.sh  start_sim.sh
ball_tracker/: AnalysisJobStore.swift  AnalysisUploadQueue.swift  AppSettingsStore.swift  ArucoDetector.h  ArucoDetector.mm  AtomicUploaderBox.swift  AudioChirpDetector.swift  AudioRecorder.swift  AudioSyncDetector.swift  AutoCalibrationViewController.swift  BallDetectionEngine.swift  BallDetector.h  BallDetector.mm  BallDetector.swift  CFARNoiseFloor.swift  CalibrationChooserViewController.swift  CalibrationShared.swift  CalibrationViewController.swift  CameraAppState.swift  CameraCaptureRuntime.swift  CameraCommandRouter.swift  CameraFrameProcessingState.swift  CameraMonitorOverlayView.swift  CameraRecordingCoordinator.swift  CameraRecordingWorkflow.swift  CameraStateController.swift  CameraStatusPresenter.swift  CameraSyncCoordinator.swift  CameraTimeSyncCoordinator.swift  CameraTransportCoordinator.swift  CameraViewController.swift  CharucoCalibrator.h  CharucoCalibrator.mm  ChirpEmitter.swift  ClipRecorder.swift  ClipTrimmer.swift  ConcurrentDetectionPool.swift  DiagnosticsData.swift  FlashDetector.swift  FrameProcessingUtils.swift  (+23 more)
ball_tracker.xcodeproj/: project.pbxproj
ball_trackerTests/: BallDetectionEngineTests.swift  BallDetectorParityTests.swift  BallDetectorTests.swift  CameraCommandRouterTests.swift  CameraRecordingWorkflowDisarmRaceTests.swift  CameraStateControllerTests.swift  ClipRecorderStateTests.swift  ConcurrentDetectionPoolTests.swift  LiveFrameDispatcherTests.swift  PayloadUploadQueueTests.swift  PitchRecorderTests.swift  ServerHealthMonitorTests.swift  ServerWebSocketConnectionTests.swift  ball_trackerTests.swift
ball_trackerUITests/: ball_trackerUITests.swift  ball_trackerUITestsLaunchTests.swift
docs/: README.md  architecture.md  heartbeat_retirement_plan.md  ios-full-pipeline-decoupling-plan.md  ios.md  ios_module_split_plan.md  iphone_camera_formats.md  live_streaming_architecture_plan.md  operations.md  protocols.md  server.md
lab/: .gitignore  CLAUDE.md  README.md  cli.py  contact_sheet.py  grounded_sam2_label_video.py  labeller.py  migrate_extract_proxies.py  propagator.py  run.py  (+9 more)
lab-fit/: .gitignore  README.md  data_loader.py  metrics.py  runner.py
lab-research/: README.md
server/: _test_helpers.py  app_bootstrap.py  audio_sync.py  auto_calibration.py  backfill_dedupe.py  ballistic_fit.py  calibrate_intrinsics.py  calibration_auto.py  calibration_routes.py  calibration_solver.py  cam_view_math.py  cam_view_ui.py  candidate_selector.py  chain_filter.py  chirp.py  chroma_alignment_check.py  cleanup_old_sessions.py  conftest.py  control_routes.py  detection.py  detection_config.py  detection_config_display.py  detection_engine.py  detection_paths.py  device_ws_routes.py  dry_run_live_rerun.py  dry_run_live_vs_server.py  dry_run_multi_ray.py  dry_run_shape.py  extended_markers.py  fitting.py  geometry_priors.py  godot_bridge.py  gt_queue_worker.py  live_pairing.py  main.py  marker_registry.py  markers_routes.py  migrate_cost_fields.py  migrate_disk_pitches.py  (+189 more)
server/algorithms/: __init__.py  _form_schema.py  base.py  hybrid_28d.py  v11_hsv_cc.py
server/data/pitches/: cycle_000001_A.json
server/data/presets/: blue_ball.json  hybrid_28d_blue_ball.json  tennis.json
server/data/results/: cycle_000001.json
server/migrations/: strip_prepr93_quarantine.py
server/routes/: algorithms.py  calibration.py  calibration_intrinsics.py  camera.py  device_ws.py  devices.py  fit.py  gt.py  markers.py  pitch.py  presets.py  sessions.py  settings.py  sim_events.py  sync.py  viewer.py
server/scripts/: distill_all.py  fit_hsv_from_gt.py  fit_selector_from_gt.py  fit_shape_gate_from_gt.py  label_with_sam2.py  label_with_sam3.py  migrate_fz_to_fy.py  retrofit_image_dims.py  sam3_visualize.py  validate_three_way.py  visualize_gt.py
server/scripts/archive/: migrate_fz_to_fy.py
server/static/: dashboard_client.js
server/static/dashboard/: 00_boot.js  05_collapsibles.js  10_state_globals.js  15_hsv_controls.js  20_trajectory.js  25_canvas_mode.js  30_traces.js  35_canvas_paint.js  36_playback.js  40_traj_handlers.js  45_canvas_mode_apply.js  50_renderers.js  55_session_render.js  56_quick_sync.js  57_strike_zone.js  60_events_render.js  65_diff_wrappers.js  70_ticks.js  72_form_handlers.js  74_preview_poll.js  76_virt_canvas.js  80_auto_cal.js  82_markers.js  84_intrinsics.js  85_device_pool.js  86_live_stream.js  88_audio_degraded.js  90_telemetry.js  92_active_tick.js  94_main.js  99_end.js
server/static/gt/: 00_state.js  10_session_list.js  20_editor.js  30_queue.js  99_main.js
server/static/threejs/: ball_marker.js  dashboard_layers.js  fit_curves_layer.js  playback_marker.js  points_layer.js  scene_runtime.js  viewer_layers.js
server/static/viewer/: 00_boot.js  10_video_master.js  20_filters.js  30_frame_index.js  40_traces.js  50_canvas.js  60_playback.js  70_handlers.js  75_algorithm_picker.js  75_view_presets.js  80_strip.js  85_sse_fit.js  95_autorefresh.js  99_end.js  viewer.css
tools/: README.md  pyproject.toml
(+212 files in other folders)
