[project]
name = "ball-tracker-server"
version = "0.1.0"
description = "FastAPI ingest + stereo triangulation server for ball_tracker iPhone app"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.136",
    "uvicorn[standard]>=0.44",
    "pydantic>=2.13",
    "numpy>=2.0",
    "opencv-contrib-python>=4.10",
]

[dependency-groups]
dev = [
    "pytest>=9.0",
    "httpx>=0.28",
]

[tool.uv]
package = false
