[project]
name = "ball-tracker-server"
version = "0.1.0"
description = "FastAPI ingest + stereo triangulation server for ball_tracker iPhone app"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.136",
    "uvicorn[standard]>=0.44",
    "pydantic>=2.13",
    "numpy>=2.0",
    # Headless variant — no Qt/GUI bundles, no libavdevice. PyAV ships its own
    # libavdevice copy and the duplicate symbol registration was producing
    # "Class AVFFrameReceiver is implemented in both ..." warnings on every
    # server boot. The full opencv-contrib-python adds libavdevice for
    # cv2.VideoCapture("avfoundation://") and friends, none of which this
    # server uses (we only need cv2.aruco / inRange / connectedComponents).
    # Same wheel content otherwise; cv2.aruco is included in the contrib
    # variant either way.
    "opencv-contrib-python-headless>=4.10",
    "python-multipart>=0.0.12",
    "av>=17.0.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0",
    "httpx>=0.28",
]

[tool.uv]
package = false
