[project]
name = "ball-tracker-tools"
version = "0.1.0"
description = "Offline SAM 2 GT labelling + parameter distillation for ball_tracker server"
requires-python = ">=3.12"
# This is a separate uv project from server/ on purpose. torch +
# transformers ~= 2-3 GB of deps and only run on the operator's M4
# Mac Air (or any Apple Silicon / CUDA box) — not on the live LAN
# server. Keeping these out of server/pyproject.toml means production
# state.py imports never trigger torch / transformers loading and the
# server boot stays fast.
#
# 2026-04-29 SAM 3 → SAM 2 swap:
#   SAM 3 needed ~20 GB peak RSS at image_size=1008 with ~2 s × 240 fps
#   windows — OOM-killed the 16 GB M4. SAM 2 hiera-tiny lands at
#   ~1.2 GB instead, ~915 ms/frame on MPS. SAM 2 has no text encoder
#   so the operator clicks the ball on the first frame and SAM 2
#   propagates forward (vs SAM 3's auto-detect from text prompt).
#
# Why git+main for transformers:
#   Kept from SAM 3 era — Sam2VideoModel works on main. Stable
#   releases also include Sam2 (4.50+) but we have no regression
#   suite to verify, so the pin stays.
#
# Why no flash-attn / Triton:
#   Both are CUDA-only. transformers' Sam2 has neither dependency, so
#   MPS works.
dependencies = [
    "torch>=2.7",
    "torchvision",
    # transformers main has Sam2VideoModel + Sam2VideoProcessor.
    "transformers @ git+https://github.com/huggingface/transformers@main",
    "accelerate>=1.0",
    "huggingface-hub>=0.27",
    "pillow>=10.0",
    "opencv-contrib-python-headless>=4.10",
    "av>=17.0.0",
    "numpy>=2.0",
    "pydantic>=2.13",
    "tqdm>=4.66",
]

[dependency-groups]
dev = [
    "pytest>=9.0",
]

[tool.uv]
package = false
